--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,9 @@
 body {
-  background-color: #FFDEDE;
-}
-hr {
-  border-style: none;
-  border-top-style: dotted;
-  border-color: grey;
-  border-width: 10px;
-  width: 10%;
-  background-color: inherit;
+  background-color: #E8F6EF;
+  text-align: center;
 }
 
-h1:hover {
-  color: gold;
-}
-
-.middle-container {
-  width: 200px;
-  height: 200px;
-  background-color: red;
-}
-
-.bottom-container {
-  width: 200px;
-  height: 200px;
-  background-color: blue;
+.top-container {
+    width: 100%;
+    height: 100%;
 }
