--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,31 @@ body {
     width: 100%;
     height: 100%;
 }
+
+h1 {
+  font-family: 'Lobster', cursive;
+  word-spacing: 5px;
+}
+
+#cloud1 {
+  position: relative;
+  top: 30px;
+  left: 150px;
+  width: 100px;
+  height: 100px;
+}
+#cloud2 {
+  position: relative;
+  right: 70px;
+  bottom: 100px;
+  width: 100px;
+  height: 100px;
+}
+
+#mountain {
+  position: relative;
+  top: 50px;
+  right: 20px;
+  width: 225px;
+  height: 225px;
+}
