--- a/css/styles.css
+++ b/css/styles.css
@@ -4,34 +4,62 @@ body {
 }
 
 .top-container {
-    width: 100%;
-    height: 100%;
+    margin: auto auto auto auto;
+    width: 100em;
+    height: 15em;
+}
+
+.skills {
+  display: inline-block;
+  margin: auto auto auto auto;
+  width: 200px;
+  height: 200px;
+}
+
+.header {
+  position: relative;
+  left: 500px;
+   width: 120px;
+   height: 120px;
+   float: left;
+}
+
+.skill-logo {
+  position: relative;
+   width: 70px;
+   height: 70px;
+   float: left;
+}
+
+.skill-header {
+  position: relative;
+  bottom: 30px;
+}
+
+.top-divider {
+  border: 0;
+   height: 3px;
+   background-image: linear-gradient(to right, rgb(255, 121, 205), rgb(132, 94, 194), rgb(255, 121, 205))
 }
 
 h1 {
+  font-size: 50px;
   font-family: 'Lobster', cursive;
   word-spacing: 5px;
+  color: #4C4C6D;
 }
 
-#cloud1 {
+h2 {
   position: relative;
-  top: 30px;
-  left: 150px;
-  width: 100px;
-  height: 100px;
-}
-#cloud2 {
-  position: relative;
-  right: 70px;
-  bottom: 100px;
-  width: 100px;
-  height: 100px;
+  bottom: 20px;
+  font-size: 25px;
+  font-style: italic;
+  text-decoration: underline;
 }
 
-#mountain {
-  position: relative;
-  top: 50px;
-  right: 20px;
-  width: 225px;
-  height: 225px;
+h3 {
+  font-size: 30px;
+  text-decoration: underline;
+  font-weight: bold;
+  color: #79B4B7;
 }
