--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ footer {
 
 .top-container {
     margin: auto auto auto auto;
+    margin-top: 20px;
     width: 100%;
     height: 18em;
 }
@@ -17,7 +18,7 @@ footer {
   display: inline-block;
   margin: auto auto auto auto;
   width: 50%;
-  height: 105em;
+  height: 85em;
 }
 
 .foot {
@@ -29,7 +30,8 @@ footer {
 
 .header {
   position: relative;
-  left: 500px;
+  left: 610px;
+  bottom: 15px;
    width: 120px;
    height: 120px;
    float: left;
@@ -37,7 +39,8 @@ footer {
 
 .skill-logo {
   position: relative;
-  left: 350px;
+  left: 375px;
+  bottom: 40px;
    width: 70px;
    height: 70px;
    float: left;
@@ -67,6 +70,8 @@ footer {
 }
 
 .java-logo {
+  position: relative;
+  right: 60px;
   width: 220px;
   height: 220px;
   float: left;
@@ -140,7 +145,7 @@ h1 {
 
 h2 {
   position: relative;
-  bottom: 20px;
+  bottom: 10px;
   font-size: 25px;
   font-style: italic;
   text-decoration: underline;
