--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #E8F6EF;
+  /*background-color: #E8F6EF;*/
+  background-image: linear-gradient(to bottom, rgb(237, 255, 236), rgb(246, 223, 235), rgb(228, 186, 212));
   text-align: center;
 }
 
@@ -30,7 +31,7 @@ footer {
 
 .header {
   position: relative;
-  left: 610px;
+  left: 300px;
   bottom: 15px;
    width: 120px;
    height: 120px;
