--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body {
-  /*background-color: #E8F6EF;*/
   background-image: linear-gradient(to bottom, rgb(237, 255, 236), rgb(246, 223, 235), rgb(228, 186, 212));
   text-align: center;
 }
@@ -9,6 +8,7 @@ footer {
 }
 
 .top-container {
+  position: static;
     margin: auto auto auto auto;
     margin-top: 20px;
     width: 40%;
@@ -16,6 +16,8 @@ footer {
 }
 
 .skills {
+  position: static;
+  z-index: 1;
   display: inline-block;
   margin: auto auto auto auto;
   width: 50%;
