--- a/css/skillPage.css
+++ b/css/skillPage.css
@@ -1,5 +1,5 @@
 body, html {
-  background-image: linear-gradient();
+  background-image: linear-gradient(to bottom, rgb(205, 240, 234), rgb(247, 219, 240), rgb(190, 174, 226));
   text-align: center;
 }
 
